--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.4.4",
-    "proxy": "http://localhost:8001"
+    "proxy": "http://localhost:8001",
+    "type": "module"
   },
   "scripts": {
     "start": "react-scripts start",
