--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "normalize.css": "^8.0.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.4.4",
-    "proxy": "http://localhost:8001",
-    "type": "module"
+    "react-hooks-testing-library": "^0.6.0",
+    "react-scripts": "3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,6 +41,7 @@
     "@testing-library/jest-dom": "^4.0.0",
     "@testing-library/react": "^8.0.7",
     "babel-loader": "8.1.0",
+    "react-test-renderer": "^16.9.0",
     "sass": "^1.53.0"
   },
   "jest": {
